<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/sourceServerPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/sourceServerPath"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/dateBegin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="date"
            android:onClick="onClick"
            android:text="@string/dateBegin"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dateEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="date"
            android:onClick="onClick"
            android:text="@string/dateEnd"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/dateButt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/dateButt" />
    </LinearLayout>

    <Button
        android:id="@+id/buttGetData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:text="@string/getData" />

    <TextView
        android:id="@+id/versionNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/versionName" />

</LinearLayout>